Make the jvm figure out memory settings from the memory limit of the docker container
(cherry picked from commit b32612b084e79c82f17afd7036df232fcc170eae)